--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -6,6 +6,21 @@ on:
   pull_request:
     types: [opened, synchronize, reopened]
 jobs:
+  test:
+      runs-on: ubuntu-latest
+      strategy:
+        matrix:
+          node-version: [12.x, 14.x, 16.x]
+          # See supported Node.js release schedule at https://nodejs.org/en/about/releases/
+      steps:
+      - uses: actions/checkout@v2
+      - name: Use Node.js ${{ matrix.node-version }}
+        uses: actions/setup-node@v2
+        with:
+          node-version: ${{ matrix.node-version }}
+          cache: 'npm'
+      - run: npm ci
+      - run: npm test
   sonarcloud:
     name: SonarCloud
     runs-on: ubuntu-latest
