--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,23 @@
-# Default ignored files
-/shelf/
-/workspace.xml
-/.idea
+# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
+
+# dependencies
+Fragments/node_modules
+Fragments/.pnp
+.pnp.js
+
+# testing
+Fragments/coverage
+
+# production
+Fragments/build
+
+# misc
+.DS_Store
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
