--- a/Fragments/package.json
+++ b/Fragments/package.json
@@ -7,21 +7,19 @@
     "@testing-library/react": "^13.2.0",
     "@testing-library/user-event": "^13.5.0",
     "bootstrap": "^5.1.3",
-<<<<<<< Updated upstream
-    "date-fns": "^2.28.0",
-    "react": "^18.1.0",
-    "react-bootstrap": "^2.3.1",
-    "react-datepicker": "^4.7.0",
-    "react-day-picker": "^8.0.4",
-=======
+    "gapi-script": "^1.2.0",
     "node-sass": "^7.0.1",
     "react": "^18.1.0",
     "react-bootstrap": "^2.3.1",
->>>>>>> Stashed changes
     "react-dom": "^18.1.0",
     "react-facebook-login": "^4.1.1",
-    "react-scripts": "5.0.1",
+    "react-gapi": "^1.0.2",
+    "react-google-login": "^5.2.2",
+    "react-router-dom": "^6.3.0",
+    "react-scripts": "^5.0.1",
+    "react-select-datepicker": "^2.1.1",
     "sass": "^1.51.0",
+    "validator": "^13.7.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
