--- a/Fragments/package.json
+++ b/Fragments/package.json
@@ -3,12 +3,27 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@netojose/react-select-datepicker": "^1.0.2",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.2.0",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "^0.27.2",
+    "bootstrap": "^5.1.3",
+    "date-fns": "^2.28.0",
+    "node-sass": "^7.0.1",
     "react": "^18.1.0",
+    "react-birthday-picker": "^1.0.5",
+    "react-bootstrap": "^2.3.1",
+    "react-datepicker": "^4.7.0",
+    "react-day-picker": "^8.0.4",
     "react-dom": "^18.1.0",
+    "react-dropdown-date": "^2.2.7",
+    "react-facebook-login": "^4.1.1",
+    "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
+    "react-select-datepicker": "^2.1.1",
+    "sass": "^1.51.0",
+    "validator": "^13.7.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
