--- a/Fragments/package.json
+++ b/Fragments/package.json
@@ -3,6 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@emotion/react": "^11.9.0",
+    "@emotion/styled": "^11.8.1",
+    "@mui/material": "^5.8.1",
     "@netojose/react-select-datepicker": "^1.0.2",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.2.0",
@@ -10,6 +13,7 @@
     "axios": "^0.27.2",
     "bootstrap": "^5.1.3",
     "date-fns": "^2.28.0",
+    "gapi-script": "^1.2.0",
     "node-sass": "^7.0.1",
     "react": "^18.1.0",
     "react-birthday-picker": "^1.0.5",
@@ -19,9 +23,11 @@
     "react-dom": "^18.1.0",
     "react-dropdown-date": "^2.2.7",
     "react-facebook-login": "^4.1.1",
+    "react-google-login": "^5.2.2",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
     "react-select-datepicker": "^2.1.1",
+    "react-tooltip": "^4.2.21",
     "sass": "^1.51.0",
     "validator": "^13.7.0",
     "web-vitals": "^2.1.4"
