--- a/Fragments/package.json
+++ b/Fragments/package.json
@@ -17,7 +17,7 @@
     "react-bootstrap": "^2.4.0",
     "react-dom": "^18.1.0",
     "react-router-dom": "^6.3.0",
-    "react-scripts": "^2.1.3",
+    "react-scripts": "^5.0.1",
     "react-select": "^5.3.2",
     "react-select-datepicker": "^2.1.1",
     "react-tooltip": "^4.2.21",
@@ -47,5 +47,9 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "axios-mock-adapter": "^1.21.1",
+    "jest-extended": "^2.0.0"
   }
 }
