--- a/Fragments/package.json
+++ b/Fragments/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@azure/storage-blob": "^12.11.0",
     "@emotion/react": "^11.9.0",
     "@emotion/styled": "^11.8.1",
     "@mui/icons-material": "^5.6.2",
@@ -11,16 +12,23 @@
     "@testing-library/react": "^13.2.0",
     "@testing-library/user-event": "^13.5.0",
     "bootstrap": "^5.1.3",
+    "compressorjs": "^1.1.1",
     "node-sass": "^7.0.1",
     "react": "^18.1.0",
     "react-bootstrap": "^2.4.0",
     "react-dom": "^18.1.0",
+    "react-image-crop": "8.6.12",
     "react-scripts": "5.0.1",
     "react-select": "^5.3.2",
     "react-select-datepicker": "^2.1.1",
     "react-tooltip": "^4.2.21",
+    "uuid": "^8.3.2",
     "validator": "^13.7.0",
     "web-vitals": "^2.1.4"
+  },
+  "devDependencies": {
+    "@babel/runtime": "7.13.8",
+    "typescript": "4.1.3"
   },
   "scripts": {
     "start": "react-scripts start",
