--- a/Fragments/package.json
+++ b/Fragments/package.json
@@ -7,6 +7,19 @@
     "@emotion/styled": "^11.8.1",
     "@mui/icons-material": "^5.6.2",
     "@mui/material": "^5.7.0",
+    "@progress/kendo-data-query": "^1.6.0",
+    "@progress/kendo-drawing": "^1.16.3",
+    "@progress/kendo-licensing": "^1.2.2",
+    "@progress/kendo-react-animation": "^5.5.0",
+    "@progress/kendo-react-buttons": "^5.5.0",
+    "@progress/kendo-react-data-tools": "^5.5.0",
+    "@progress/kendo-react-dateinputs": "^5.5.0",
+    "@progress/kendo-react-dropdowns": "^5.5.0",
+    "@progress/kendo-react-grid": "^5.5.0",
+    "@progress/kendo-react-inputs": "^5.5.0",
+    "@progress/kendo-react-intl": "^5.5.0",
+    "@progress/kendo-react-treeview": "^5.5.0",
+    "@progress/kendo-theme-default": "^5.6.0",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.2.0",
     "@testing-library/user-event": "^13.5.0",
