--- a/.github/workflows/CI.yaml
+++ b/.github/workflows/CI.yaml
@@ -29,7 +29,7 @@ jobs:
       - name: Build npm packages
         run: |
           cd Fragments
-          npm build
+          npm rebuild
 
       - name: Run npm tests
         run: |
