--- a/.github/workflows/CI.yaml
+++ b/.github/workflows/CI.yaml
@@ -27,14 +27,15 @@ jobs:
           npm install
 
       - name: Build npm packages
-        run: |
-          cd Fragments
-          npm rebuild
+        run: pwd
+        # run: |
+        #   cd Fragments
+        #   npm rebuild
 
-      - name: Run npm tests
-        run: |
-          cd Fragments
-          npm test -- --coverage
+      # - name: Run npm tests
+      #   run: |
+      #     cd Fragments
+      #     npm test -- --coverage
 
 ################################
   # sonarcloud:
