--- a/.github/workflows/CI.yaml
+++ b/.github/workflows/CI.yaml
@@ -22,9 +22,7 @@ jobs:
           fetch-depth: 0
 
       - name: Install npm dependencies
-        run: |
-          cd Fragments
-          npm install
+        run: npm install
 
       - name: Build npm packages
         run: pwd
