--- a/.github/workflows/CI.yaml
+++ b/.github/workflows/CI.yaml
@@ -27,10 +27,14 @@ jobs:
           npm install
 
       - name: Build npm packages
-        run: npm run build
+        run: |
+          cd Fragments
+          npm run build
 
       - name: Run npm tests
-        run: npm test -- --coverage
+        run: |
+          cd Fragments
+          npm test -- --coverage
 
 ################################
   # sonarcloud:
