--- a/.github/workflows/CI.yaml
+++ b/.github/workflows/CI.yaml
@@ -34,7 +34,7 @@ jobs:
       - name: Run npm tests
         run: |
           cd Fragments
-          npm test -- --coverage
+          npm test
 
 ################################
   # sonarcloud:
