--- a/.github/workflows/CI.yaml
+++ b/.github/workflows/CI.yaml
@@ -47,18 +47,10 @@ jobs:
       - name: Install modules
         run: |
           cd Fragments
-          yarn install
           npm install
 
-      - name: Eneble modules
-        run: |
-          cd Fragments
-          yarn
-
       - name: Run ESLint
-        run: |
-          cd Fragments
-          eslint . --ext .js,.jsx,.ts,.tsx
+        run: npx eslint Fragments/**
 
 
 ################################
