--- a/.github/workflows/CI.yaml
+++ b/.github/workflows/CI.yaml
@@ -48,6 +48,7 @@ jobs:
         run: |
           cd Fragments
           npm install
+          npm init @eslint/config
 
       - name: Run ESLint
         run: npx eslint Fragments/**
