--- a/.github/workflows/CI.yaml
+++ b/.github/workflows/CI.yaml
@@ -48,7 +48,7 @@ jobs:
         run: |
           cd Fragments
           npm install
-          npm init eslint@8.21.0
+          npm init eslint
 
       - name: Run ESLint
         run: |
