--- a/.github/workflows/CI.yaml
+++ b/.github/workflows/CI.yaml
@@ -52,7 +52,7 @@ jobs:
       - name: Install eslint
         run: |
           cd Fragments
-          npm init eslint
+          npm init @eslint/config
 
       - name: Run ESLint
         run: |
