--- a/.github/workflows/eslint.yaml
+++ b/.github/workflows/eslint.yaml
@@ -18,7 +18,7 @@ jobs:
           uses: actions/checkout@v3
 
         - name: Install modules
-          run: npm install --global
+          run: npm install
 
         - name: Run eslint
           uses: stefanoeb/eslint-action@1.0.2
