--- a/.github/workflows/eslint.yaml
+++ b/.github/workflows/eslint.yaml
@@ -18,9 +18,12 @@ jobs:
           uses: actions/checkout@v3
 
         - name: Install modules
-          run: npm install
+          run: |
+            cd Fragments
+            npm install
 
         - name: Run eslint
+          run: cd Fragments
           uses: stefanoeb/eslint-action@1.0.2
           with:
-            files: Fragments/src/
+            files: src/
