--- a/.github/workflows/eslint.yaml
+++ b/.github/workflows/eslint.yaml
@@ -18,9 +18,7 @@ jobs:
           uses: actions/checkout@v3
 
         - name: Install modules
-          run: |
-            cd Fragments
-            npm install -g eslint
+          run: sudo npm install -g eslint
 
         - name: Run eslint
           uses: stefanoeb/eslint-action@1.0.2
