--- a/.github/workflows/eslint.yaml
+++ b/.github/workflows/eslint.yaml
@@ -18,7 +18,10 @@ jobs:
           uses: actions/checkout@v3
 
         - name: Install modules
-          run: sudo npm install -g eslint
+          run: npm install eslint-plugin-react-hooks --save --dev
+
+        - name: Init
+          run: npm install -g eslint
 
         - name: Run eslint
           uses: stefanoeb/eslint-action@1.0.2
