--- a/.github/workflows/CI.yaml
+++ b/.github/workflows/CI.yaml
@@ -38,12 +38,13 @@ jobs:
   eslint:
     runs-on: ubuntu-latest
     steps:
-      # - name: install Node.js
-      #   run: |
-      #     curl -fsSL https://deb.nodesource.com/setup_18.x | sudo -E bash -
-      #     sudo apt-get install -y nodejs
-        - name: TEST CURL
-          run: curl --version
+      - name: install Node.js
+        run: |
+          curl -fsSL https://deb.nodesource.com/setup_18.x | sudo -E bash -
+          sudo apt-get install -y nodejs
+
+      - name: version nodejs
+        run: nodejs --version
 
 
 ################################
