--- a/.github/workflows/CI.yaml
+++ b/.github/workflows/CI.yaml
@@ -42,10 +42,20 @@ jobs:
         run: |
           curl -fsSL https://deb.nodesource.com/setup_18.x | sudo -E bash -
           sudo apt-get install -y nodejs
+          node --version
 
-      - name: version nodejs
-        run: node --version
+      - name: Clone Front-End repo
+        uses: actions/checkout@v3
+        with:
+          fetch-depth: 0
 
+      - name: Install eslint
+        run: |
+          ls -la
+          npm init @eslint/config
+
+      - name: Run eslint
+        run: npx eslint Fragments/src/**
 
 ################################
   # sonarcloud:
