--- a/.github/workflows/CI.yaml
+++ b/.github/workflows/CI.yaml
@@ -40,9 +40,7 @@ jobs:
     steps:
       - name: install Node.js
         run: |
-          curl -fsSL https://deb.nodesource.com/setup_18.x | sudo -E bash -
-          sudo apt-get install -y nodejs
-          node --version
+          node -v
 
       - name: Clone Front-End repo
         uses: actions/checkout@v3
@@ -55,7 +53,7 @@ jobs:
           ls -la
           cd Fragments
           pwd
-          npm init
+          npm init @eslint/config
 
       - name: Run eslint
         run: |
