--- a/.github/workflows/CI.yaml
+++ b/.github/workflows/CI.yaml
@@ -38,10 +38,6 @@ jobs:
   eslint:
     runs-on: ubuntu-latest
     steps:
-      - name: install Node.js
-        run: |
-          node -v
-
       - name: Clone Front-End repo
         uses: actions/checkout@v3
         with:
@@ -49,17 +45,11 @@ jobs:
 
       - name: Install eslint
         run: |
-          pwd
-          ls -la
           cd Fragments
-          pwd
-          npm init @eslint/config
+          npm -g install eslint-plugin-import eslint-config-airbnb-base
 
       - name: Run eslint
-        run: |
-          pwd
-          ls -la
-          npx eslint src/**
+        run: npx eslint src/**
 
 ################################
   # sonarcloud:
