--- a/.github/workflows/CI.yaml
+++ b/.github/workflows/CI.yaml
@@ -49,7 +49,7 @@ jobs:
           npm -g install eslint-plugin-import eslint-config-airbnb-base
 
       - name: Run eslint
-        run: npx eslint src/**
+        run: npx eslint --color src/App.js
 
 ################################
   # sonarcloud:
