--- a/.github/workflows/CI.yaml
+++ b/.github/workflows/CI.yaml
@@ -49,7 +49,7 @@ jobs:
           npm -g install eslint-plugin-import eslint-config-airbnb-base
 
       - name: Config eslint
-        run: ./node_modules/.bin/eslint --init
+        run: eslint --init
 
       - name: Run eslint
         uses: stefanoeb/eslint-action@1.0.2
