--- a/.github/workflows/CI.yaml
+++ b/.github/workflows/CI.yaml
@@ -49,7 +49,7 @@ jobs:
           yarn
 
       - name: Run eslint
-        run: eslint src/. --ext .js,.jsx,.ts,.tsx
+        run: yarn run eslint . --ext .js,.jsx
 
 ################################
   # sonarcloud:
