--- a/.github/workflows/CI.yaml
+++ b/.github/workflows/CI.yaml
@@ -7,9 +7,6 @@ on:
   pull_request:
     branches:
       - master
-env:
-    GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-    SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
 
 jobs:
   build_and_test:
@@ -36,6 +33,7 @@ jobs:
           npm test -- --coverage
 
   eslint:
+    needs: [build_and_test]
     runs-on: ubuntu-latest
     steps:
       - name: Clone Front-End repo
@@ -54,44 +52,6 @@ jobs:
           yarn run eslint src/ --ext .js --ext .jsx --color
 
 ################################
-  # sonarcloud:
-  #   name: SonarCloud
-  #   runs-on: ubuntu-latest
-  #   steps:
-  #     - uses: actions/checkout@v2
-  #       with:
-  #         fetch-depth: 0
-  #     - name: SonarCloud Scan
-  #       uses: SonarSource/sonarcloud-github-action@master
-
-
-
-# jobs:
-#   install-and-test:
-#     runs-on: ubuntu-latest
-
-#     steps:
-#       - uses: actions/checkout@v2
-
-#       - name: create-credentials-manager
-#         id: create-credentials-manager
-#         uses: jsdaniell/create-json@1.1.2
-#         with:
-#           name: "credentials.json"
-#           json: ${{ secrets.CREDENTIALS }}
-#           dir: "./Car/credentials"
-
-#       - name: Install npm dependencies
-
-#         run: |
-#           cd Car
-#           npm install
-#       - name: Run tests
-#         run: |
-#           cd Car
-#           npm test -- --coverage
-
-
 
 #   sonarcloud:
 #     runs-on: ubuntu-latest
@@ -100,14 +60,6 @@ jobs:
 
 #     steps:
 #       - uses: actions/checkout@v2
-
-#       - name: create-credentials-manager
-#         id: create-credentials-manager
-#         uses: jsdaniell/create-json@1.1.2
-#         with:
-#           name: "credentials.json"
-#           json: "${{ secrets.CREDENTIALS }}"
-#           dir: "./Car/credentials"
 
 #       - name: Install npm dependencies
 
