--- a/.github/workflows/CI.yaml
+++ b/.github/workflows/CI.yaml
@@ -33,7 +33,7 @@ jobs:
           npm test -- --coverage
 
   eslint:
-    needs: [build_and_test]
+    # needs: [build_and_test]
     runs-on: ubuntu-latest
     steps:
       - name: Clone Front-End repo
@@ -52,7 +52,7 @@ jobs:
           yarn run eslint src/ --ext .js --ext .jsx --color
 
   sonarcloud_analysis:
-    needs: [build_and_test]
+    # needs: [build_and_test]
     runs-on: ubuntu-latest
     steps:
       - name: Clone Front-End repo
