--- a/Fragments/package.json
+++ b/Fragments/package.json
@@ -5,8 +5,13 @@
   "dependencies": {
     "@emotion/react": "^11.9.0",
     "@emotion/styled": "^11.8.1",
+    "@material-ui/core": "^4.12.4",
+    "@mui/core": "^5.0.0-alpha.54",
     "@mui/icons-material": "^5.6.2",
+    "@mui/lab": "^5.0.0-alpha.93",
     "@mui/material": "^5.7.0",
+    "@mui/styles": "^5.9.3",
+    "@mui/x-data-grid": "^5.15.0",
     "@progress/kendo-data-query": "^1.6.0",
     "@progress/kendo-drawing": "^1.16.3",
     "@progress/kendo-licensing": "^1.2.2",
@@ -25,15 +30,18 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.27.2",
     "bootstrap": "^5.1.3",
+    "material-table": "^1.36.0",
     "react": "^18.1.0",
     "react-bootstrap": "^2.4.0",
     "react-dom": "^18.1.0",
     "react-facebook-login": "^4.1.1",
     "react-google-login": "^5.2.2",
+    "react-paginate": "^8.1.3",
     "react-router-dom": "^6.3.0",
     "react-scripts": "^5.0.1",
     "react-select": "^5.3.2",
     "react-select-datepicker": "^2.1.1",
+    "react-table": "^7.8.0",
     "react-tooltip": "^4.2.21",
     "validator": "^13.7.0",
     "web-vitals": "^2.1.4"
