--- a/Fragments/package.json
+++ b/Fragments/package.json
@@ -25,8 +25,10 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.27.2",
     "bootstrap": "^5.1.3",
+    "date-fns": "^2.29.2",
     "react": "^18.1.0",
     "react-bootstrap": "^2.4.0",
+    "react-date-range": "^1.4.0",
     "react-dom": "^18.1.0",
     "react-facebook-login": "^4.1.1",
     "react-google-login": "^5.2.2",
